--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,15 @@
         {
             "type": "vcs",
             "url": "git@github.com:gwannon/PHPClientifyAPI.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:gwannon/PHPActiveCampaignAPI.git"
         }
     ],
     "require": {
         "gwannon/phpclientifyapi": "dev-main",
+        "gwannon/phpactivecampaignapi": "dev-main",
         "orhanerday/open-ai": "^4.8"
     }
 }
